--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 			<blockquote><p>-Теперь можно стирать свой прогресс</p></blockquote>
 			<blockquote><p>-За конфеты теперь можно получить больше монет</p></blockquote>
 			<hr><hr>
+			<h3>Нововведения версии 0.4:</h3>
+			<blockquote><p>-Теперь можно покупать новые виды конфет которые дают больше монет</p></blockquote>
+			<hr><hr>
 		</div>
 	</div>
 	<div> <!-- об игре -->
